unpackaged/main/default/objects/Business_Day__c/Business_Day__c.object-meta.xml
<CustomObject>
    <label>Business Day</label>
    <nameField>
        <displayFormat>BD-{0000}</displayFormat>
        <label>Business Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>