unpackaged/main/default/objects/Business_Day__c/fields/Business_Date_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Business_Date_of_Month__c</fullName>
    <label>Business Date of Month</label>
    <type>Date</type>
</CustomField>