unpackaged/main/default/objects/Business_Day__c/fields/Business_Day_Goal_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Day_Goal_Value__c</fullName>
    <label>Business Day Goal Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>