unpackaged/main/default/objects/Business_Day__c/fields/Business_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Business_Day_of_Month__c</fullName>
    <label>Business Day of Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>